syntax = "proto3";

package sc.internal.services.entitygraph.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "sc/external/services/entitygraph/v1/rpc_messages.proto";

service EntityGraphService {
  rpc MutateEntities ( MutateEntitiesRequest ) returns ( MutateEntitiesResponse );
  rpc EntityMutationStream (stream EntityMutationStreamRequest ) returns (stream EntityMutationStreamResponse );
  rpc Stow ( StowRequest ) returns ( StowResponse );
  rpc Unstow ( UnstowRequest ) returns ( UnstowResponse );
  rpc Bury ( BuryRequest ) returns ( BuryResponse );
  rpc EntityQuery ( EntityQueryRequest ) returns ( EntityQueryResponse );
  rpc LoadAll ( LoadAllRequest ) returns ( LoadAllResponse );
  rpc SnapshotQuery ( SnapshotQueryRequest ) returns ( SnapshotQueryResponse );
  rpc MutateContainerGraph ( MutateContainerGraphRequest ) returns ( MutateContainerGraphResponse );
  rpc ContainerMutationStream (stream ContainerMutationStreamRequest ) returns (stream ContainerMutationStreamResponse );
  rpc ContainerQuery ( ContainerQueryRequest ) returns ( ContainerQueryResponse );
  rpc CreateMetaRecords ( CreateMetaRecordsRequest ) returns ( CreateMetaRecordsResponse );
  rpc EraseMetaRecords ( EraseMetaRecordsRequest ) returns ( EraseMetaRecordsResponse );
  rpc QueryMetaRecords ( QueryMetaRecordsRequest ) returns ( QueryMetaRecordsResponse );
  rpc GetEntitiesOwners ( GetEntitiesOwnersRequest ) returns ( GetEntitiesOwnersResponse );
  rpc CreateEntityClasses ( CreateEntityClassesRequest ) returns ( CreateEntityClassesResponse );
  rpc EraseEntityClasses ( EraseEntityClassesRequest ) returns ( EraseEntityClassesResponse );
  rpc QueryEntityClasses ( QueryEntityClassesRequest ) returns ( QueryEntityClassesResponse );
  rpc CreateShard ( CreateShardRequest ) returns ( CreateShardResponse );
  rpc DestroyShard ( DestroyShardRequest ) returns ( DestroyShardResponse );
  rpc QueryShards ( QueryShardsRequest ) returns ( QueryShardsResponse );
  rpc GetShard ( GetShardRequest ) returns ( GetShardResponse );
  rpc AcquireShard ( AcquireShardRequest ) returns ( AcquireShardResponse );
  rpc ChangeShardStatus ( ChangeShardStatusRequest ) returns ( ChangeShardStatusResponse );
  rpc StowShard ( StowShardRequest ) returns ( StowShardResponse );
  rpc RepairShard ( RepairShardRequest ) returns ( RepairShardResponse );
  rpc RepairShardSchema ( RepairShardSchemaRequest ) returns ( RepairShardSchemaResponse );
  rpc GetShardHostsMap ( GetShardHostsMapRequest ) returns ( GetShardHostsMapResponse );
  rpc MutateInventories ( MutateInventoriesRequest ) returns ( MutateInventoriesResponse );
  rpc InventoryQuery ( InventoryQueryRequest ) returns ( InventoryQueryResponse );
  rpc ChangeInventoryConfiguration ( ChangeInventoryConfigurationRequest ) returns ( ChangeInventoryConfigurationResponse );
  rpc Melt ( MeltRequest ) returns ( MeltResponse );
  rpc EntityQueryStream ( EntityQueryStreamRequest ) returns (stream EntityQueryStreamResponse );
  rpc GetOverloadControlMetrics ( GetOverloadControlMetricsRequest ) returns ( GetOverloadControlMetricsResponse );
  rpc ContainerQueryStream ( ContainerQueryStreamRequest ) returns (stream ContainerQueryStreamResponse );
  rpc GetEntitiesRoots ( GetEntitiesRootsRequest ) returns ( GetEntitiesRootsResponse );
  rpc GetEntityStowContexts ( GetEntityStowContextsRequest ) returns ( GetEntityStowContextsResponse );
  rpc MoveAll ( MoveAllRequest ) returns ( MoveAllResponse );
}

message ContainerQueryRequest {
  external.services.entitygraph.v1.ContainerQueryRequestBody body = 1;
}

message ContainerQueryResponse {
  external.services.entitygraph.v1.ContainerQueryResponseBody body = 1;
}

message EntityQueryRequest {
  external.services.entitygraph.v1.EntityQueryRequestBody body = 1;
}

message EntityQueryResponse {
  external.services.entitygraph.v1.EntityQueryResponseBody body = 1;
}

message MutateEntitiesRequest {
  external.services.entitygraph.v1.MutateEntitiesRequestBody body = 1;
}

message MutateEntitiesResponse {
  external.services.entitygraph.v1.MutateEntitiesResponseBody body = 1;
}

message EntityMutationStreamRequest {
  external.services.entitygraph.v1.EntityMutationStreamRequestBody body = 1;
}

message EntityMutationStreamResponse {
  external.services.entitygraph.v1.EntityMutationStreamResponseBody body = 1;
}

message StowRequest {
  external.services.entitygraph.v1.StowRequestBody body = 1;
}

message StowResponse {
  external.services.entitygraph.v1.StowResponseBody body = 1;
}

message UnstowRequest {
  external.services.entitygraph.v1.UnstowRequestBody body = 1;
}

message UnstowResponse {
  external.services.entitygraph.v1.UnstowResponseBody body = 1;
}

message BuryRequest {
  external.services.entitygraph.v1.BuryRequestBody body = 1;
}

message BuryResponse {
  external.services.entitygraph.v1.BuryResponseBody body = 1;
}

message ChangeInventoryConfigurationRequest {
  external.services.entitygraph.v1.ChangeInventoryConfigurationRequestBody body = 1;
}

message ChangeInventoryConfigurationResponse {
  external.services.entitygraph.v1.ChangeInventoryConfigurationResponseBody body = 1;
}

message LoadAllRequest {
  external.services.entitygraph.v1.LoadAllRequestBody body = 1;
}

message LoadAllResponse {
  external.services.entitygraph.v1.LoadAllResponseBody body = 1;
}

message SnapshotQueryRequest {
  external.services.entitygraph.v1.SnapshotQueryRequestBody body = 1;
}

message SnapshotQueryResponse {
  external.services.entitygraph.v1.SnapshotQueryResponseBody body = 1;
}

message MutateContainerGraphRequest {
  external.services.entitygraph.v1.MutateContainerGraphRequestBody body = 1;
}

message MutateContainerGraphResponse {
  external.services.entitygraph.v1.MutateContainerGraphResponseBody body = 1;
}

message ContainerMutationStreamRequest {
  external.services.entitygraph.v1.ContainerMutationStreamRequestBody body = 1;
}

message ContainerMutationStreamResponse {
  external.services.entitygraph.v1.ContainerMutationStreamResponseBody body = 1;
}

message CreateMetaRecordsRequest {
  external.services.entitygraph.v1.CreateMetaRecordsRequestBody body = 1;
}

message CreateMetaRecordsResponse {
  external.services.entitygraph.v1.CreateMetaRecordsResponseBody body = 1;
}

message EraseMetaRecordsRequest {
  external.services.entitygraph.v1.EraseMetaRecordsRequestBody body = 1;
}

message EraseMetaRecordsResponse {
  external.services.entitygraph.v1.EraseMetaRecordsResponseBody body = 1;
}

message QueryMetaRecordsRequest {
  external.services.entitygraph.v1.QueryMetaRecordsRequestBody body = 1;
}

message QueryMetaRecordsResponse {
  external.services.entitygraph.v1.QueryMetaRecordsResponseBody body = 1;
}

message GetEntitiesOwnersRequest {
  external.services.entitygraph.v1.GetEntitiesOwnersRequestBody body = 1;
}

message GetEntitiesOwnersResponse {
  external.services.entitygraph.v1.GetEntitiesOwnersResponseBody body = 1;
}

message CreateEntityClassesRequest {
  external.services.entitygraph.v1.CreateEntityClassesRequestBody body = 1;
}

message CreateEntityClassesResponse {
  external.services.entitygraph.v1.CreateEntityClassesResponseBody body = 1;
}

message EraseEntityClassesRequest {
  external.services.entitygraph.v1.EraseEntityClassesRequestBody body = 1;
}

message EraseEntityClassesResponse {
  external.services.entitygraph.v1.EraseEntityClassesResponseBody body = 1;
}

message QueryEntityClassesRequest {
  external.services.entitygraph.v1.QueryEntityClassesRequestBody body = 1;
}

message QueryEntityClassesResponse {
  external.services.entitygraph.v1.QueryEntityClassesResponseBody body = 1;
}

message CreateShardRequest {
  external.services.entitygraph.v1.CreateShardRequestBody body = 1;
}

message CreateShardResponse {
  external.services.entitygraph.v1.CreateShardResponseBody body = 1;
}

message DestroyShardRequest {
  external.services.entitygraph.v1.DestroyShardRequestBody body = 1;
}

message DestroyShardResponse {
  external.services.entitygraph.v1.DestroyShardResponseBody body = 1;
}

message QueryShardsRequest {
  external.services.entitygraph.v1.QueryShardsRequestBody body = 1;
}

message QueryShardsResponse {
  external.services.entitygraph.v1.QueryShardsResponseBody body = 1;
}

message GetShardRequest {
  external.services.entitygraph.v1.GetShardRequestBody body = 1;
}

message GetShardResponse {
  external.services.entitygraph.v1.GetShardResponseBody body = 1;
}

message AcquireShardRequest {
  external.services.entitygraph.v1.AcquireShardRequestBody body = 1;
}

message AcquireShardResponse {
  external.services.entitygraph.v1.AcquireShardResponseBody body = 1;
}

message ChangeShardStatusRequest {
  external.services.entitygraph.v1.ChangeShardStatusRequestBody body = 1;
}

message ChangeShardStatusResponse {
  external.services.entitygraph.v1.ChangeShardStatusResponseBody body = 1;
}

message StowShardRequest {
  external.services.entitygraph.v1.StowShardRequestBody body = 1;
}

message StowShardResponse {
  external.services.entitygraph.v1.StowShardResponseBody body = 1;
}

message RepairShardRequest {
  external.services.entitygraph.v1.RepairShardRequestBody body = 1;
}

message RepairShardResponse {
  external.services.entitygraph.v1.RepairShardResponseBody body = 1;
}

message RepairShardSchemaRequest {
  external.services.entitygraph.v1.RepairShardSchemaRequestBody body = 1;
}

message RepairShardSchemaResponse {
  external.services.entitygraph.v1.RepairShardSchemaResponseBody body = 1;
}

message GetShardHostsMapRequest {}

message GetShardHostsMapResponse {
  repeated Host hosts = 1;

  message Host {
    string host = 1;
    repeated string shards = 2;
  }
}

message MutateInventoriesRequest {
  external.services.entitygraph.v1.MutateInventoriesRequestBody body = 1;
}

message MutateInventoriesResponse {
  external.services.entitygraph.v1.MutateInventoriesResponseBody body = 1;
}

message InventoryQueryRequest {
  external.services.entitygraph.v1.InventoryQueryRequestBody body = 1;
}

message InventoryQueryResponse {
  external.services.entitygraph.v1.InventoryQueryResponseBody body = 1;
}

message MeltRequest {
  external.services.entitygraph.v1.MeltRequestBody body = 1;
}

message MeltResponse {
  external.services.entitygraph.v1.MeltResponseBody body = 1;
}

message EntityQueryStreamRequest {
  external.services.entitygraph.v1.EntityQueryStreamRequestBody body = 1;
}

message EntityQueryStreamResponse {
  external.services.entitygraph.v1.EntityQueryStreamResponseBody body = 1;
}

message GetOverloadControlMetricsRequest {
  external.services.entitygraph.v1.GetOverloadControlMetricsRequestBody body = 1;
}

message GetOverloadControlMetricsResponse {
  external.services.entitygraph.v1.GetOverloadControlMetricsResponseBody body = 1;
}

message ContainerQueryStreamRequest {
  external.services.entitygraph.v1.ContainerQueryStreamRequestBody body = 1;
}

message ContainerQueryStreamResponse {
  external.services.entitygraph.v1.ContainerQueryStreamResponseBody body = 1;
}

message GetEntitiesRootsRequest {
  external.services.entitygraph.v1.GetEntitiesRootsRequestBody body = 1;
}

message GetEntitiesRootsResponse {
  external.services.entitygraph.v1.GetEntitiesRootsResponseBody body = 1;
}

message GetEntityStowContextsRequest {
  external.services.entitygraph.v1.GetEntityStowContextsRequestBody body = 1;
}

message GetEntityStowContextsResponse {
  external.services.entitygraph.v1.GetEntityStowContextsResponseBody body = 1;
}

message MoveAllRequest {
  external.services.entitygraph.v1.MoveAllRequestBody body = 1;
}

message MoveAllResponse {
  external.services.entitygraph.v1.MoveAllResponseBody body = 1;
}

